# present

./: README.md  pyproject.toml
docs/: conf.py  gallery.py
present/: cli.py  dynamic_formatter.py  effects.py  markdown.py  slide.py  slideshow.py  utils.py
tests/: test_present.py
